fix: z-index

--- a/static/scss/catalog/tabs.scss
+++ b/static/scss/catalog/tabs.scss
@@ -52,7 +52,6 @@
     display: block;
     letter-spacing: -0.32em;
     position: relative;
-    z-index: 2;
     margin-top: 35px;
 
     @include media-breakpoint-down(sm) {
